--- a/0x01-react_intro/task_2/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_2/dashboard/src/Notifications.css
@@ -1,4 +1,12 @@
 .Notifications {
-    padding: 1em;
+    padding: 1em 0.5rem;
     border: 2px dotted red;
+}
+
+.Notifications [data="default"] {
+    color: blue;
+}
+
+.Notifications [data="urgent"] {
+    color: red;
 }
