--- a/0x02-react_props/task_2/dashboard/src/App/App.css
+++ b/0x02-react_props/task_2/dashboard/src/App/App.css
@@ -1,10 +1,13 @@
-.App {
-  height: 100vh;
-  max-width: 100vw;
+:root {
   --border-bottom: 4px solid red;
   --padding: 1.2em;
   --heading-font-size: 1.4rem;
   --gen-font-size: 1.4rem;
+}
+
+.App {
+  height: 100vh;
+  max-width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
 }
 
