Commence with class components

--- a/0x03-React_component/task_0/dashboard/src/Notifications/Notifications.css
+++ b/0x03-React_component/task_0/dashboard/src/Notifications/Notifications.css
@@ -1,19 +1,12 @@
 .Notifications {
-    padding: 1em 0.5rem;
-    border: 2px dotted red;
-    position: absolute;
-    right: 1em;
+    border: thin dotted #e0344a;
+    padding: 16px;
 }
 
-.Notifications [data-notification-type="default"] {
-    color: blue;
-}
-
-.Notifications [data-notification-type="urgent"] {
+ul li[data-priority='urgent'] {
     color: red;
 }
 
-.menuItem {
-    text-align: end;
-    margin-right: 1em;
+ul li[data-priority='default'] {
+    color: blue;
 }
