--- a/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
+++ b/0x03-React_component/task_0/dashboard/src/Footer/Footer.css
@@ -1,6 +1,8 @@
-.App-footer {
-    font-size: var(--gen-font-size);
-    padding: var(--padding);
+.footer {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
     text-align: center;
     font-style: italic;
+    border-top: thick solid #e0344a;
 }
