--- a/0x03-React_component/task_0/dashboard/src/Login/Login.css
+++ b/0x03-React_component/task_0/dashboard/src/Login/Login.css
@@ -1,6 +1,12 @@
-.App-body {
-    font-size: var(--gen-font-size);
-    padding: var(--padding);
-    border-bottom: var(--border-bottom);
-    height: 45%;
+.login {
+    padding: 16px 24px;
+}
+
+.login input,
+.login button {
+    margin: 4px;
+}
+
+.login button {
+    cursor: pointer;
 }
